# happy

./: .env.docker  .env.sample  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cmd_notify.py  createadmin.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_birthday.py  0004_alter_user_managers_alter_user_name.py
users/services/: mailing.py  telegram.py
users/templates/users/: base.html  users_list.html
users/templates/users/includes/: inc_main_menu.html
users/templates/users/registration/: login.html  register.html
