[tool.poetry]
name = "happy-birthday"
version = "0.1.0"
description = ""
authors = ["grbcas <grbcas@gmail.com>"]
readme = "README.md"
packages = [{include = "happy_birthday"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.1"
celery = "^5.4.0"
requests = "^2.31.0"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
